--- a/UserClient/CMakeLists.txt
+++ b/UserClient/CMakeLists.txt
@@ -6,16 +6,20 @@ set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 
 set(SOURCE_FILES
 	main.cpp
+	Configurations.cpp
+	UserClient.cpp
 )
 
 set (HEADER_FILES
+	Configurations.h
+	UserClient.h
 )
 
 project(${PROGRAM_NAME} VERSION 1.0.0.0)
 
 add_executable(${PROGRAM_NAME} ${HEADER_FILES} ${SOURCE_FILES})
 
-target_link_libraries(${PROGRAM_NAME} PUBLIC CommonComponent)
+target_link_libraries(${PROGRAM_NAME} PUBLIC CommonComponent Utilities Thread Network)
 target_include_directories(${PROGRAM_NAME} PRIVATE "${CMAKE_CURRENT_SOURCE_DIR}")
 
 set(JSON_FILES
