--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,6 +14,10 @@ set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/lib")
 
 set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
+if(APPLE AND NOT CMAKE_CROSSCOMPILING)
+    list(APPEND CMAKE_PREFIX_PATH /usr/local /opt/homebrew)
+endif()
+
 project(${PROJECT_NAME} VERSION 1.0.0.0)
 
 find_package(Threads REQUIRED)
