--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,6 +19,7 @@ project(${PROJECT_NAME} VERSION 1.0.0.0)
 find_package(Threads REQUIRED)
 
 add_subdirectory(.cpp_tool_kit)
+# add_subdirectory(.ProjectSample)
 
 add_subdirectory(CommonModule)
 add_subdirectory(MainServer)
