--- a/MainServer/main_server_configurations.json
+++ b/MainServer/main_server_configurations.json
@@ -1,10 +1,19 @@
 {
-	"client_title" : "MainServer",
-	"client_sub_title" : "MainServer",
+	"server_title" : "MainServer",
+	"server_sub_title" : "MainServer",
+	"main_registered_key": "main_server",
 	"high_priority_count" : 3,
 	"normal_priority_count" : 3,
 	"low_priority_count" : 5,
 	"write_console_log" : 3,
 	"write_file_log" : 0,
-	"console_windows": false
+	"console_windows": false,
+
+	"database_server_ip": "127.0.0.1",
+	"database_server_port": 9877,
+	"database_registered_key": "database_server",
+
+	"main_server_port": 9876,
+	"buffer_size": 32768,
+	"encrypt_mode" : true
 }
