--- a/UserClient/user_client_configurations.json
+++ b/UserClient/user_client_configurations.json
@@ -6,5 +6,10 @@
 	"low_priority_count" : 5,
 	"write_console_log" : 3,
 	"write_file_log" : 0,
-	"console_windows": false
+	"console_windows": false,
+
+	"main_server_ip": "127.0.0.1",
+	"main_server_port": 9876,
+	"buffer_size": 32768,
+	"encrypt_mode" : true
 }
