--- a/MainServer/main_server_configurations.json
+++ b/MainServer/main_server_configurations.json
@@ -15,5 +15,14 @@
 
 	"main_server_port": 9876,
 	"buffer_size": 32768,
-	"encrypt_mode" : true
+	"encrypt_mode" : true,
+
+	"use_redis_tls": false,
+	"use_redis": false,
+	"redis_host": "tcp:://127.0.0.1",
+	"redis_port": 6379,
+	"redis_ttl_sec": 600,
+	"redis_db_global_message_index": 0,
+	"redis_db_user_status_index": 1
+
 }
