--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,3 +27,4 @@ add_subdirectory(.cpp_tool_kit)
 add_subdirectory(CommonModule)
 add_subdirectory(MainServer)
 add_subdirectory(UserClient)
+add_subdirectory(MainServerConsumer)
