--- a/MainServerConsumer/main_server_consumer_configurations.json
+++ b/MainServerConsumer/main_server_consumer_configurations.json
@@ -10,8 +10,8 @@
 	"console_windows": false,
 
 	"use_redis_tls": false,
-	"use_redis": false,
-	"redis_host": "tcp:://127.0.0.1",
+	"use_redis": true,
+	"redis_host": "tcp://127.0.0.1",
 	"redis_port": 6379,
 	"redis_ttl_sec": 600,
 	"redis_db_global_message_index": 0,
@@ -25,8 +25,8 @@
 
 	"rabbit_mq_host": "localhost",
 	"rabbit_mq_port": 5672,
-	"rabbit_mq_user_name": "main_server",
-	"rabbit_mq_password": "",
+	"rabbit_mq_user_name": "guest",
+	"rabbit_mq_password": "guest",
 
 	"consume_queue_name": "message_broadcast_queue",
 	
