--- a/MainServer/main_server_configurations.json
+++ b/MainServer/main_server_configurations.json
@@ -18,8 +18,8 @@
 	"encrypt_mode" : true,
 
 	"use_redis_tls": false,
-	"use_redis": false,
-	"redis_host": "tcp:://127.0.0.1",
+	"use_redis": true,
+	"redis_host": "127.0.0.1",
 	"redis_port": 6379,
 	"redis_ttl_sec": 600,
 	"redis_db_global_message_index": 0,
