--- a/MainServerConsumer/main_server_consumer_configurations.json
+++ b/MainServerConsumer/main_server_consumer_configurations.json
@@ -11,7 +11,7 @@
 
 	"use_redis_tls": false,
 	"use_redis": true,
-	"redis_host": "tcp://127.0.0.1",
+	"redis_host": "127.0.0.1",
 	"redis_port": 6379,
 	"redis_ttl_sec": 600,
 	"redis_db_global_message_index": 0,
