rest api queue 이름 변경 db cli 임시 추석 처리

--- a/.go_lang/RestAPI/.env
+++ b/.go_lang/RestAPI/.env
@@ -1,6 +1,6 @@
 # RabbitMQ 서버 설정
 RABBITMQ_URL=amqp://guest:guest@localhost:5672/
-QUEUE_NAME=task_queue
+QUEUE_NAME=message_broadcast_queue
 
 # Redis 서버 설정
 REDIS_HOST=localhost
