u: docker 스크립트와 consumer callback class 추가

--- a/MainServerConsumer/CMakeLists.txt
+++ b/MainServerConsumer/CMakeLists.txt
@@ -8,11 +8,13 @@ set(SOURCE_FILES
 	main.cpp
 	Configurations.cpp
 	MainServerConsumer.cpp
+	MessageCallbacks.cpp
 )
 
 set (HEADER_FILES
 	Configurations.h
 	MainServerConsumer.h
+	MessageCallbacks.h
 )
 
 project(${PROGRAM_NAME} VERSION 1.0.0.0)
