--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,7 +1,7 @@
 cmake_minimum_required(VERSION 3.18)
 
 set(PROJECT_NAME RealTimeMessageChat)
-set(CMAKE_CXX_STANDARD 20)
+set(CMAKE_CXX_STANDARD 23)
 set(CMAKE_CXX_STANDARD_REQUIRED TRUE)
 set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} -D_DEBUG")
 
@@ -16,6 +16,9 @@ set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_LIST_DIR}/cmake")
 
 if(APPLE AND NOT CMAKE_CROSSCOMPILING)
     list(APPEND CMAKE_PREFIX_PATH /usr/local /opt/homebrew)
+endif()
+if(DEFINED VCPKG_TARGET_TRIPLET)
+    list(APPEND CMAKE_PREFIX_PATH "${CMAKE_BINARY_DIR}/vcpkg_installed/${VCPKG_TARGET_TRIPLET}")
 endif()
 
 project(${PROJECT_NAME} VERSION 1.0.0.0)
