--- a/RestAPI/config/api_server_config.json
+++ b/RestAPI/config/api_server_config.json
@@ -22,6 +22,40 @@
     "connection_retry": 5,
     "retry_delay_seconds": 5
   },
+  "redis": {
+    "host": "localhost",
+    "port": 6379,
+    "password": "",
+    "db": 0,
+    "dial_timeout_seconds": 5,
+    "read_timeout_seconds": 3,
+    "write_timeout_seconds": 3,
+    "pool_size": 10,
+    "min_idle_conns": 5,
+    "enabled": true
+  },
+  "database": {
+    "host": "localhost",
+    "port": 5432,
+    "user": "postgres",
+    "password": "postgres",
+    "dbname": "rtmc",
+    "sslmode": "disable",
+    "max_open_conns": 25,
+    "max_idle_conns": 10,
+    "conn_max_lifetime_minutes": 30,
+    "enabled": true
+  },
+  "auth": {
+    "jwt_secret": "your-secret-key-change-in-production",
+    "jwt_expiration_hours": 24,
+    "refresh_expiration_hours": 720,
+    "enabled": false
+  },
+  "metrics": {
+    "enabled": true,
+    "path": "/metrics"
+  },
   "logging": {
     "level": "info",
     "format": "json",
